--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<module>memory/repository/spring-ai-model-chat-memory-repository-mongodb</module>
 		<module>memory/repository/spring-ai-model-chat-memory-repository-neo4j</module>
 		<module>memory/repository/spring-ai-model-chat-memory-repository-redis</module>
+		<module>memory/repository/spring-ai-model-chat-memory-repository-dynamo-db</module>
 
 
 
